--- a/static/css/style.css
+++ b/static/css/style.css
@@ -112,3 +112,58 @@ nav {
 #burgerBar {
   color: #09093a;
 }
+
+/* ----------------------------------------social media links --------------------------------*/
+
+.icons-style{
+    padding-top: 20px;
+    font-size: 40px;
+    text-align: center;
+    display: inline-block;
+}
+
+.icons-style i{
+    padding-right: 20px;
+}
+
+.fa-facebook-square{
+    color: #3b5998;
+}
+
+.fa-twitter-square{
+    color: #00aced;
+}
+
+.fa-instagram{
+    color: #ffc838;
+}
+
+.fa-youtube-square{
+    color: #cc181e;
+}
+
+.fa-facebook-square:hover{
+    color: #293e6a;
+    transform: scale(2,2)
+}
+
+.fa-twitter-square:hover{
+    color: #00678e;
+    transform: scale(2,2)
+}
+
+.fa-instagram:hover{
+    color: #b28c27;
+    transform: scale(2,2)
+}
+
+.fa-youtube-square:hover{
+    color: #8e1015;
+    transform: scale(2,2)
+}
+
+.certs {
+  padding-top: 20px;
+}
+
+
