--- a/static/css/style.css
+++ b/static/css/style.css
@@ -41,7 +41,7 @@ nav .nav-wrapper .brand-logo img {
   min-height: 500px;
   line-height: 0;
   height: auto;
-  color: rgba(255,255,255,.9);
+  color: rgba(255,255,255);
 }
   .parallax-container .section {
     width: 100%;
@@ -99,6 +99,7 @@ nav .nav-wrapper .brand-logo img {
 }
 nav {
   background-color: #fff;
+  padding-bottom: 30px;
 }
 
 .heading {
@@ -166,4 +167,6 @@ nav {
   padding-top: 20px;
 }
 
-
+#mobile {
+  color: blue;
+}
